--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -3,7 +3,8 @@
 <%= form_tag posts_path do %>
 <form action="<%= posts_path %>" method="POST">
   <label>Post title:</label><br>
-  <input type="text" id="post_title" name="post[title]"><br>
+  <!-- <input type="text" id="post_title" name="post[title]"> -->
+  <%= text_field_tag :'post[title]' %><br>
 
   <label>Post description:</label><br>
   <textarea id="post_description" name="post[description]"></textarea><br>
